@@ -164,6 +164,20 @@ Get a newer version at http://docbook.sourceforge.net/projects/xsl/
         </link>
       </xsl:for-each>
   </xsl:template>
+  
+  <xsl:template name="user.footer.content">
+    <div class="footer">
+      <hr />
+      <xsl:choose>
+        <xsl:when test="$gtkdoc.version">
+          Generated by GTK-Doc V<xsl:copy-of select="$gtkdoc.version" />
+        </xsl:when>
+        <xsl:otherwise>
+          Generated by GTK-Doc
+        </xsl:otherwise>
+      </xsl:choose>
+    </div>
+  </xsl:template>
 
   <xsl:template match="title" mode="book.titlepage.recto.mode">
     <table class="navigation" id="top" width="100%"
