@@ -1665,12 +1665,8 @@ $$args_desc
 $$signals_desc
 
 $see_also
-
-<refsect1><refsect2 /><refsect2 /></refsect1>
 </refentry>
 EOF
-# This above is a hack to get a final <hr> in the output
-
     close (OUTPUT);
 
     return &UpdateFileIfChanged ($old_sgml_file, $new_sgml_file, 0);
@@ -1710,7 +1706,6 @@ sub OutputExtraFile {
 
     return &UpdateFileIfChanged ($old_sgml_file, $new_sgml_file, 0);
 }
-
 #############################################################################
 # Function    : OutputBook
 # Description : Outputs the SGML entities that need to be included into the
