@@ -139,10 +139,17 @@ div.table table th
 
 hr
 {
-  color: #888;
-  background: #888;
+  color: #777777;
+  background: #777777;
   border: 0;
   height: 1px;
   clear: both;
 }
 
+.footer
+{
+  padding-top: 3.5em;
+  color: #777777;
+  text-align: center;
+  font-size: 80%;
+}
