@@ -1,5 +1,12 @@
 2007-11-11  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtk-doc.xsl:
+	* gtkdoc-mkdb.in:
+	* style.css:
+	  Alternative and cleaner footer implementation (unblock #365913).
+
+2007-11-11  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: David Nečas <yeti@physics.muni.cz>
 
 	* gtkdoc-mkdb.in:
